# main.go
@@ -72,7 +72,7 @@ func main() {
 
 	r.Get("/user/{username}", handlers.GetUserHandler(db))
 	r.Post("/register", handlers.RegisterHandler(db))
-	r.Get("/vault/{username}", handlers.GetVaultHandler(db))
+	r.Get("/vault/{id}", handlers.GetVaultHandler(db))
 
 	// Serve OpenAPI documentation
 	r.Get("/swagger/*", httpSwagger.WrapHandler)
